--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hardhat-gas-reporter": "^1.0.10"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.1"
+    "@openzeppelin/contracts": "^5.0.1",
+    "typescript": "^5.4.5"
   }
 }
